# itmo-ml-services

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  docker-compose.yml  requirements.txt  test.db
backend/models/: android_test.csv  lgbm.joblib  logreg.joblib
backend/src/: -- SQLite.sql  main.py  models.py  routes.py  schemas.py  services.py  task.py  test.db  worker.py  worker_task.py
backend/src/auth/: auth.py  schemas.py  user_manager.py
backend/src/core/: database.py
backend/src/models/: models.py  user.py
backend/src/repositories/: model_repository.py
backend/src/worker/: worker_task.py
data/: android_test_1.csv
frontend/: Dockerfile  main.py  requirements.txt
frontend/src/: layouts.py  main.py
frontend/src/callbacks/: models.py  predictions.py  users.py
ml_task/: Azamatov_ML.ipynb
