[tool.poetry]
name = "itmo-ml-services"
version = "0.1.0"
description = ""
authors = ["Ildar Azamatov <ildar.azamatov.personal@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.25"
sqlmodel = "^0.0.14"
passlib = "^1.7.4"
pytz = "^2023.3.post1"
pydantic-settings = "^2.1.0"
python-jose = "^3.3.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
uvicorn = {extras = ["standard"], version = "^0.25.0"}
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
joblib = "^1.3.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
rq = "^1.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
